<resources>
    <string name="app_name">WGU Go</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_about">About</string>
    <string name="profile">"Graduate Profile</string>
    <string name="activity_about">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer non condimentum diam, nec feugiat eros. Pellentesque sapien quam, aliquet eget tellus mattis, finibus placerat nisi. Nullam et dolor facilisis velit varius mattis. Donec ut ipsum tristique, tempus lorem ac, dignissim eros. Phasellus tellus elit, ullamcorper sit amet congue eget, ullamcorper eget mi. Curabitur blandit lorem eu feugiat pulvinar. Fusce vestibulum arcu at turpis dignissim efficitur. In hendrerit ex bibendum neque fringilla pellentesque. Aenean nec orci at turpis suscipit pretium. Duis lobortis rhoncus vulputate. Sed tristique varius metus et euismod. Integer at sem vel tellus viverra facilisis a vel nunc. Morbi condimentum aliquam blandit.
\n\n
Duis sit amet nibh non mi auctor faucibus. In eu elit lacus. Donec facilisis nec elit et varius. Nunc sed convallis ligula. Nullam efficitur ut erat eget vestibulum. Donec quis tellus felis. In eu sem non sapien eleifend facilisis. Suspendisse quis suscipit lorem.
\n\n
Proin tincidunt vitae neque a semper. Pellentesque fermentum metus euismod sodales cursus. Phasellus ac ligula id lectus facilisis ullamcorper. Nunc tellus neque, vehicula sit amet ornare non, cursus at nulla. Cras hendrerit, sapien a hendrerit posuere, urna urna porta magna, non pharetra urna ligula a orci. Nunc imperdiet, purus nec eleifend feugiat, orci dolor mollis risus, in aliquam sem nibh tincidunt lectus. Fusce convallis aliquam lorem semper mattis.</string>
    <string name="menu_item_courses_landing">Courses</string>
    <string name="menu_item_terms_landing">Terms</string>
    <string name="title_activity_courses_landing">Courses</string>
    <string name="Add">ADD +</string>
    <string name="title_activity_terms_landing">Terms</string>
    <string name="title_activity_course_detail">Course</string>
    <string name="save">Save</string>
    <string name="title_activity_term_detail">Term Details</string>
    <string name="title_activity_graduate_form">Profile Settings</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="course">Course Details</string>
    <string name="title">Title</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="course_mentor">Course Mentor</string>
    <string name="status">Status</string>
    <string name="term">Term</string>
    <string name="title_activity_assessment">AssessmentActivity</string>
</resources>
