<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_course_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.wgu.hreid6.wgugo.CourseDetailActivity"
    tools:showIn="@layout/activity_course_detail">

    <TextView
        android:id="@+id/profile_header"
        style="@style/pageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/course" />

    <LinearLayout
        android:id="@+id/fld_group_course_title"
        style="@style/fldGroup"
        android:layout_below="@+id/profile_header">

        <TextView
            android:id="@+id/lbl_course_title"
            style="@style/wguFormLabel"
            android:text="@string/title" />

        <EditText
            android:id="@+id/fld_course_title"
            style="@style/wguTextField"
            android:hint="Calculus III"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/fld_msg_course_title"
            style="@style/wguFormMessage"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fld_group_start_date"
        style="@style/fldGroup"
        android:layout_below="@+id/fld_group_course_title">

        <TextView
            android:id="@+id/lbl_start_date"
            style="@style/wguFormLabel"
            android:text="@string/start_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ro_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jan 1, 1995"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btn_start_date_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Pick Date"
                android:textSize="12sp"
                android:onClick="showDatePickerDialog"/>
        </LinearLayout>

        <TextView
            android:id="@+id/fld_msg_start_date"
            style="@style/wguFormMessage"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fld_group_end_date"
        style="@style/fldGroup"
        android:layout_below="@+id/fld_group_start_date">

        <TextView
            android:id="@+id/lbl_end_date"
            style="@style/wguFormLabel"
            android:text="@string/end_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ro_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btn_end_date_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Pick Date"
                android:textSize="12sp"
                android:onClick="showDatePickerDialog"/>
        </LinearLayout>

        <TextView
            android:id="@+id/fld_msg_end_date"
            style="@style/wguFormMessage"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fld_group_status"
        style="@style/fldGroup"
        android:layout_below="@+id/fld_group_end_date">

        <TextView
            android:id="@+id/lbl_status"
            style="@style/wguFormLabel"
            android:text="@string/status" />

        <Spinner
            android:id="@+id/fld_course_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fld_group_statys" />

        <TextView
            android:id="@+id/fld_msg_status"
            style="@style/wguFormMessage"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fld_group_mentor"
        style="@style/fldGroup"
        android:layout_below="@+id/fld_group_status">

        <TextView
            android:id="@+id/lbl_mentor"
            style="@style/wguFormLabel"
            android:text="@string/course_mentor" />

        <EditText
            android:id="@+id/fld_mentor"
            style="@style/wguTextField"
            android:hint="Michael Cohen"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/fld_msg_mentor"
            style="@style/wguFormMessage"
            android:text="" />
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:id="@+id/id_course"
        android:text=""
        />
</RelativeLayout>
