<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_term_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.wgu.hreid6.wgugo.TermDetailActivity"
    tools:showIn="@layout/activity_term_detail">

    <TextView
        android:id="@+id/profile_header"
        style="@style/pageHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/term" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profile_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fld_group_term_title"
                style="@style/fldGroup">

                <TextView
                    android:id="@+id/lbl_term_title"
                    style="@style/wguFormLabel"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/fld_term_title"
                    style="@style/wguTextField"
                    android:hint="Spring 2017"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/fld_msg_term_title"
                    style="@style/wguFormMessage"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fld_group_start_date"
                style="@style/fldGroup"
                android:layout_width="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbl_start_date"
                        style="@style/wguFormLabel"
                        android:text="@string/start_date" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/ro_start_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Jan 1, 1995"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/btn_start_date_button"
                            android:layout_width="70dp"
                            android:layout_height="40dp"

                            android:layout_marginLeft="0dp"
                            android:onClick="showDatePickerDialog"
                            android:text="Pick Date"
                            android:textSize="9sp"
                            />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/fld_msg_start_date"
                        style="@style/wguFormMessage"
                        android:text="" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fld_group_end_date"
                    style="@style/fldGroup"
                    android:layout_width="0dp"
                    android:layout_weight="0.5">

                    <TextView
                        android:id="@+id/lbl_end_date"
                        style="@style/wguFormLabel"
                        android:text="@string/end_date" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="true"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/ro_end_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/btn_end_date_button"
                            android:layout_width="70dp"
                            android:layout_height="40dp"
                            android:layout_marginLeft="0dp"
                            android:onClick="showDatePickerDialog"
                            android:text="Pick Date"
                            android:textSize="9sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/fld_msg_end_date"
                        style="@style/wguFormMessage"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fld_group_status"
                style="@style/fldGroup">

                <TextView
                    android:id="@+id/lbl_status"
                    style="@style/wguFormLabel"
                    android:text="@string/status" />

                <Spinner
                    android:id="@+id/fld_term_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fld_group_statys" />

                <TextView
                    android:id="@+id/fld_msg_status"
                    style="@style/wguFormMessage"
                    android:text="" />
            </LinearLayout>

            <TextView
                android:id="@+id/lbl_courses"
                style="@style/wguFormLabel"
                android:text="@string/title_activity_courses_landing"
                android:textAlignment="center"/>

            <Button
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:text="Add Course"
                android:textSize="8sp"
                android:onClick="addCourseToTerm"/>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/term_courses_list"></ListView>
            </ScrollView>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/id_term"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text=""
        android:visibility="gone" />

</RelativeLayout>
